kubernetes/apps/uptime-kuma/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external 
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.litts.xyz`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
    - match: Host(`www.uptime.litts.xyz`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: local-litts-xyz-tls
